@@ -1,3 +1,8 @@
+2007-11-18  Daniel Steffen  <das@users.sourceforge.net>
+
+	* generic/tclExecute.c (TclExecuteByteCode:INST_EXIST_*): Fix read
+	traces not firing on non-existent array elements. [Bug 1833522]
+
 2007-11-16  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
 	* generic/tclCmdIL.c (TclInitInfoCmd): Rename the implementation
